# botcore

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: pr_checks.yml  publish.yml  release.yml
benches/: engine_bench.rs
examples/: block_trader.rs
src/: engine.rs  error.rs  lib.rs  metrics.rs  types.rs
tests/: integration_test.rs
