[package]
name = "botcore"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
tokio-stream = "0.1"
tokio = { version = "1.32", features = ["full"] }
tracing = "0.1"
thiserror = "2.0.11"
prometheus = { version = "0.13", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
once_cell = { version = "1.17", optional = true }
[features]
# When enabled, the metrics code will be compiled in.
metrics = ["prometheus", "once_cell"]
