[package]
name = "botcore"
version = "0.1.0"
edition = "2021"
description = "An event-driven, asynchronous bot orchestration engine in Rust"
authors = ["ss-sonic <shubham@routerprotocol.com>"]
license = "MIT"
repository = "https://github.com/ss-sonic/botcore"
documentation = "https://docs.rs/botcore"
readme = "README.md"
keywords = ["bot", "trading", "engine", "mev", "arbitrage"]
categories = ["asynchronous", "development-tools", "trading"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
tokio-stream = "0.1"
tokio = { version = "1.32", features = ["full"] }
tracing = "0.1"
thiserror = "2.0.11"
prometheus = { version = "0.13", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
once_cell = { version = "1.17", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
futures = "0.3"

[features]
metrics = ["prometheus", "once_cell"]

[[bench]]
name = "engine_bench"
harness = false
